--- a/scss/index.css
+++ b/scss/index.css
@@ -1,3 +1,440 @@
+body {
+  color: #0d161f;
+  font-family: "Red Hat Display", sans-serif;
+  background: #f5f9fc;
+  height: 100vh;
+  padding: 0;
+  margin: 0; }
+  body main {
+    height: 100%;
+    display: flex; }
+  body button {
+    border-radius: 32px;
+    padding: 8px 16px;
+    border: 0;
+    box-shadow: 0;
+    cursor: pointer;
+    white-space: nowrap;
+    font-weight: 600; }
+    body button[class$="button--primary"] {
+      background-color: #0091ff;
+      color: #ffffff; }
 
+aside {
+  height: 100%;
+  display: flex;
+  align-items: stretch;
+  width: 30%;
+  flex-shrink: 0; }
+
+.main-menu {
+  background: #ffffff;
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  height: 100%;
+  box-sizing: border-box;
+  position: relative;
+  padding: 16px 0;
+  border-right: 2px solid rgba(13, 22, 31, 0.1);
+  width: 60px;
+  flex-shrink: 0; }
+  .main-menu__logo {
+    margin: 0;
+    padding: 0;
+    margin-bottom: 20px; }
+  .main-menu__top-links, .main-menu__bottom-links {
+    width: 100%; }
+    .main-menu__top-links ul, .main-menu__bottom-links ul {
+      margin: 0;
+      padding: 0;
+      list-style: none;
+      text-align: center; }
+      .main-menu__top-links ul li a, .main-menu__bottom-links ul li a {
+        color: rgba(13, 22, 31, 0.4);
+        transition: 0.2s; }
+  .main-menu__top-links ul li a {
+    position: relative;
+    display: block;
+    width: 100%;
+    text-align: center;
+    padding: 6px 0;
+    margin: 12px 0; }
+    .main-menu__top-links ul li a::before {
+      content: "";
+      display: block;
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: calc(-100% + 12px);
+      width: 50px;
+      border-radius: 5px; }
+    .main-menu__top-links ul li a:hover {
+      color: #0091ff; }
+      .main-menu__top-links ul li a:hover::before {
+        background-color: #0091ff; }
+  .main-menu__bottom-links {
+    position: absolute;
+    bottom: 16px; }
+    .main-menu__bottom-links ul li {
+      width: 100%;
+      padding: 12px 0; }
+      .main-menu__bottom-links ul li a {
+        width: 32px;
+        height: 32px;
+        margin: 0 auto;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-decoration: none; }
+        .main-menu__bottom-links ul li a:hover {
+          background-color: rgba(95, 199, 174, 0.2);
+          color: #5fc7ae;
+          border-radius: 50%; }
+
+.profile-photo a {
+  padding: 0; }
+.profile-photo figure {
+  margin: 0;
+  padding: 0;
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  overflow: hidden;
+  margin: 0 auto; }
+  .profile-photo figure img {
+    width: 100%;
+    height: auto; }
+.profile-photo--away a {
+  position: relative; }
+  .profile-photo--away a::before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    background: #ffb901;
+    border-radius: 50%;
+    width: 6px;
+    height: 6px;
+    border: 2px solid #ffffff; }
+
+.sidebar {
+  background: #ffffff;
+  padding: 22px 50px;
+  width: 100%; }
+  .sidebar .sidebar-top {
+    display: flex;
+    align-items: center;
+    justify-content: space-between; }
+    .sidebar .sidebar-top__status {
+      margin: 0;
+      border-radius: 4px;
+      padding: 2px 8px;
+      font-weight: 700;
+      font-size: 0.7rem; }
+      .sidebar .sidebar-top__status--signed {
+        background-color: rgba(0, 145, 255, 0.2);
+        color: #308fd6; }
+    .sidebar .sidebar-top__folder, .sidebar .sidebar-top__ellipsis {
+      color: rgba(13, 22, 31, 0.4);
+      padding: 5px;
+      text-decoration: none; }
+  .sidebar .sidebar-main {
+    padding: 20px 0 26px 0;
+    text-align: center; }
+    .sidebar .sidebar-main .profile-photo {
+      width: 70px;
+      margin: 0 auto; }
+      .sidebar .sidebar-main .profile-photo figure {
+        width: 100%;
+        height: 70px; }
+    .sidebar .sidebar-main__title {
+      margin: 12px auto 0;
+      font-size: 1.1rem; }
+    .sidebar .sidebar-main__link {
+      text-decoration: none;
+      color: #308fd6;
+      font-weight: 700;
+      font-size: 0.8rem; }
+    .sidebar .sidebar-main__icons {
+      margin-top: 22px;
+      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center; }
+    .sidebar .sidebar-main__icon {
+      margin-right: 20px;
+      width: 32px;
+      height: 32px;
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-decoration: none;
+      font-size: 0.8rem; }
+      .sidebar .sidebar-main__icon--success {
+        color: #5fc7ae;
+        background: rgba(95, 199, 174, 0.2); }
+      .sidebar .sidebar-main__icon--accent {
+        color: #ffb901;
+        background: rgba(255, 185, 1, 0.2); }
+      .sidebar .sidebar-main__icon--primary {
+        color: #0091ff;
+        background: rgba(0, 145, 255, 0.2); }
+  .sidebar .sidebar-loading {
+    margin-bottom: 50px; }
+    .sidebar .sidebar-loading__label {
+      font-size: 0.9rem;
+      font-weight: 700;
+      color: rgba(13, 22, 31, 0.4); }
+      .sidebar .sidebar-loading__label strong {
+        color: #0d161f;
+        font-weight: 900;
+        display: inline-block;
+        margin-right: 6px; }
+    .sidebar .sidebar-loading__bar {
+      width: 100%;
+      height: 6px;
+      border-radius: 12px;
+      background-color: rgba(13, 22, 31, 0.1);
+      position: relative; }
+      .sidebar .sidebar-loading__bar::before {
+        content: "";
+        display: block;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        background: #0091ff;
+        border-radius: 12px; }
+      .sidebar .sidebar-loading__bar--0::before {
+        width: 0; }
+      .sidebar .sidebar-loading__bar--20::before {
+        width: 20%; }
+      .sidebar .sidebar-loading__bar--40::before {
+        width: 40%; }
+      .sidebar .sidebar-loading__bar--60::before {
+        width: 60%; }
+      .sidebar .sidebar-loading__bar--80::before {
+        width: 80%; }
+      .sidebar .sidebar-loading__bar--100::before {
+        width: 100%; }
+  .sidebar .sidebar-option {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-top: 1px solid rgba(13, 22, 31, 0.1);
+    padding-top: 15px;
+    margin-top: 15px;
+    text-decoration: none; }
+    .sidebar .sidebar-option:first-of-type {
+      border-top: 0;
+      margin-top: 0;
+      padding-top: 0; }
+    .sidebar .sidebar-option__arrow {
+      color: #0091ff;
+      background: rgba(0, 145, 255, 0.2);
+      padding: 12px;
+      border-radius: 6px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin-right: 12px; }
+    .sidebar .sidebar-option__info {
+      margin: 0;
+      width: 100%; }
+      .sidebar .sidebar-option__info strong {
+        color: #0d161f;
+        display: block;
+        font-size: 0.9rem; }
+      .sidebar .sidebar-option__info span {
+        color: rgba(13, 22, 31, 0.4);
+        font-weight: 700;
+        font-size: 0.7rem; }
+    .sidebar .sidebar-option__right {
+      color: rgba(13, 22, 31, 0.4);
+      text-decoration: none; }
+  .sidebar .sidebar-details {
+    font-size: 0.9rem;
+    padding: 42px 0 22px; }
+    .sidebar .sidebar-details__title {
+      margin: 0;
+      font-weight: 700;
+      margin-bottom: 16px;
+      padding-bottom: 10px;
+      border-bottom: 1px solid rgba(13, 22, 31, 0.1); }
+      .sidebar .sidebar-details__title i {
+        display: inline-block;
+        margin-right: 6px; }
+    .sidebar .sidebar-details ul {
+      margin: 0;
+      padding: 0;
+      list-style: none; }
+      .sidebar .sidebar-details ul li {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-bottom: 12px; }
+        .sidebar .sidebar-details ul li a {
+          font-weight: 700;
+          color: #308fd6;
+          text-decoration: none; }
+        .sidebar .sidebar-details ul li strong {
+          font-weight: 600; }
+        .sidebar .sidebar-details ul li .profile-photo {
+          display: flex;
+          align-items: center;
+          justify-content: center; }
+          .sidebar .sidebar-details ul li .profile-photo figure {
+            margin-right: 6px;
+            width: 22px;
+            height: 22px; }
+          .sidebar .sidebar-details ul li .profile-photo figcaption {
+            font-weight: 700; }
+  .sidebar .sidebar-appointment {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background: rgba(0, 145, 255, 0.2);
+    border-radius: 10px;
+    padding: 8px 12px;
+    text-decoration: none; }
+    .sidebar .sidebar-appointment i {
+      color: #308fd6; }
+    .sidebar .sidebar-appointment__calendar {
+      margin-right: 12px; }
+    .sidebar .sidebar-appointment__info {
+      width: 100%; }
+      .sidebar .sidebar-appointment__info span {
+        color: rgba(13, 22, 31, 0.4);
+        font-size: 0.7rem;
+        font-weight: 700;
+        display: block; }
+      .sidebar .sidebar-appointment__info strong {
+        font-weight: 900;
+        font-size: 0.9rem;
+        color: #0d161f; }
+
+article {
+  padding: 26px 60px;
+  width: 70%; }
+
+.header-menu {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  padding-bottom: 22px;
+  margin-bottom: 32px;
+  border-bottom: 1px solid rgba(13, 22, 31, 0.1); }
+  .header-menu ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    display: flex; }
+  .header-menu__link {
+    margin-right: 32px; }
+    .header-menu__link a {
+      color: rgba(13, 22, 31, 0.4);
+      font-size: 0.9rem;
+      font-weight: 700;
+      text-decoration: none; }
+    .header-menu__link--active a {
+      color: #0d161f; }
+  .header-menu__note {
+    background: #0091ff;
+    color: #ffffff;
+    border-radius: 50%;
+    width: 32px;
+    height: 32px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none; }
+
+.booking-status {
+  background: #ffffff;
+  border-radius: 12px;
+  padding: 40px 22px;
+  margin-bottom: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center; }
+  .booking-status__icon {
+    color: #5fc7ae;
+    margin-right: 20px;
+    font-size: 1.5rem; }
+  .booking-status__content {
+    width: 100%; }
+    .booking-status__content h2 {
+      font-size: 1.1rem;
+      margin: 0 0 4px 0;
+      font-weight: 900; }
+    .booking-status__content p {
+      color: rgba(13, 22, 31, 0.4);
+      margin: 0;
+      font-size: 0.8rem;
+      font-weight: 700; }
+
+.cards {
+  display: flex;
+  justify-content: space-between; }
+  .cards .card {
+    background: #ffffff;
+    border-radius: 12px;
+    padding: 40px 22px;
+    width: calc(50% - 12px);
+    box-sizing: border-box;
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between; }
+    .cards .card__status-circle {
+      font-size: 0.65rem;
+      margin-right: 34px;
+      margin-top: 8px; }
+      .cards .card__status-circle--available {
+        color: #0091ff; }
+      .cards .card__status-circle--unavailable {
+        color: #ffb901; }
+    .cards .card__content {
+      width: 100%; }
+      .cards .card__content h3 {
+        margin: 0;
+        font-weight: 900; }
+    .cards .card__amount {
+      font-size: 2rem;
+      font-weight: 900;
+      margin: 20px 0; }
+    .cards .card__list {
+      margin: 0;
+      padding: 0;
+      list-style: none; }
+      .cards .card__list li {
+        border-bottom: 1px solid rgba(13, 22, 31, 0.1);
+        padding-bottom: 12px;
+        margin-bottom: 12px;
+        font-size: 0.8rem;
+        font-weight: 700;
+        display: flex;
+        justify-content: space-between; }
+        .cards .card__list li:last-child {
+          border-bottom: 0;
+          padding-bottom: 0;
+          margin-bottom: 0; }
+    .cards .card__list-status {
+      font-weight: 900;
+      font-size: 0.7rem;
+      display: flex;
+      justify-content: center;
+      align-items: center; }
+      .cards .card__list-status i {
+        font-size: 1.1rem;
+        margin-right: 6px; }
+      .cards .card__list-status--signed {
+        color: #5fc7ae; }
+    .cards .card__arrow {
+      margin-top: 6px;
+      color: rgba(13, 22, 31, 0.4); }
 
 /*# sourceMappingURL=index.css.map */
