--- a/scss/style.scss
+++ b/scss/style.scss
@@ -82,6 +82,7 @@ aside {
   display: flex;
   align-items: stretch;
   width: 30%;
+  max-width: 600px;
   flex-shrink: 0;
 }
 
@@ -523,6 +524,7 @@ aside {
 article {
   padding: 26px 60px;
   width: 70%;
+  max-width: 1300px;
 }
 
 .header-menu {
@@ -531,7 +533,6 @@ article {
   align-items: center;
   width: 100%;
   padding-bottom: 22px;
-  margin-bottom: 32px;
   border-bottom: 1px solid $light;
 
   ul {
@@ -546,11 +547,13 @@ article {
       color: $text--light;
       font-size: $font--medium;
       font-weight: 700;
+      transition: 0.5s ease;
     }
 
     &--active {
       a {
         color: $text;
+        transition: 0.5s ease;
       }
     }
   }
@@ -567,11 +570,18 @@ article {
   }
 }
 
+#selected-border {
+  background: $primary;
+  width: 66px;
+  height: 1px;
+  transition: 0.5s ease;
+}
+
 .booking-status {
   background: $surface;
   border-radius: 12px;
   padding: 28px 22px;
-  margin-bottom: 24px;
+  margin: 32px 0 24px;
   display: flex;
   align-items: center;
   justify-content: center;
