--- a/scss/index.css
+++ b/scss/index.css
@@ -2,11 +2,9 @@ body {
   color: #0d161f;
   font-family: "Red Hat Display", sans-serif;
   background: #f5f9fc;
-  height: 100vh;
   padding: 0;
   margin: 0; }
   body main {
-    height: 100%;
     display: flex; }
   body button {
     border-radius: 32px;
@@ -23,23 +21,20 @@ body {
     text-decoration: none; }
 
 aside {
-  height: 100%;
   display: flex;
   align-items: stretch;
   width: 30%;
   max-width: 600px;
-  flex-shrink: 0; }
+  flex-shrink: 0;
+  background: #ffffff; }
 
 .main-menu {
-  background: #ffffff;
   display: flex;
   flex-flow: column nowrap;
   align-items: center;
-  height: 100%;
   box-sizing: border-box;
   position: relative;
   padding: 16px 0;
-  border-right: 2px solid rgba(13, 22, 31, 0.1);
   width: 60px;
   flex-shrink: 0; }
   .main-menu__logo {
@@ -124,7 +119,8 @@ aside {
 .sidebar {
   background: #ffffff;
   padding: 22px 50px;
-  width: 100%; }
+  width: 100%;
+  border-left: 1px solid rgba(13, 22, 31, 0.1); }
   .sidebar .sidebar-top {
     display: flex;
     align-items: center;
@@ -251,7 +247,8 @@ aside {
         font-weight: 700;
         font-size: 0.7rem; }
     .sidebar .sidebar-option__right {
-      color: rgba(13, 22, 31, 0.4); }
+      color: rgba(13, 22, 31, 0.4);
+      padding-left: 6px; }
   .sidebar .sidebar-details {
     font-size: 0.9rem;
     padding: 42px 0 22px; }
@@ -311,18 +308,45 @@ aside {
         font-size: 0.9rem;
         color: #0d161f; }
 
+#toggle-sidebar {
+  display: none;
+  border-top-right-radius: 12px;
+  border-bottom-right-radius: 12px;
+  align-items: center;
+  justify-content: center;
+  color: rgba(13, 22, 31, 0.4);
+  cursor: pointer;
+  height: 32px;
+  width: 32px;
+  position: absolute;
+  right: -32px;
+  top: 58px;
+  background: #ffffff;
+  border: 1px solid rgba(13, 22, 31, 0.1);
+  border-left: 0; }
+
 article {
   padding: 26px 60px;
+  height: 100vh;
   width: 70%;
-  max-width: 1300px; }
+  max-width: 1300px;
+  box-sizing: border-box; }
 
-.header-menu {
+header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: 100%;
   padding-bottom: 22px;
   border-bottom: 1px solid rgba(13, 22, 31, 0.1); }
+
+#menu-button {
+  display: none; }
+
+.header-menu {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center; }
   .header-menu ul {
     margin: 0;
     padding: 0;
@@ -338,15 +362,16 @@ article {
     .header-menu__link--active a {
       color: #0d161f;
       transition: 0.5s ease; }
-  .header-menu__note {
-    background: #0091ff;
-    color: #ffffff;
-    border-radius: 50%;
-    width: 32px;
-    height: 32px;
-    display: flex;
-    align-items: center;
-    justify-content: center; }
+
+.header-note {
+  background: #0091ff;
+  color: #ffffff;
+  border-radius: 50%;
+  width: 32px;
+  height: 32px;
+  display: flex;
+  align-items: center;
+  justify-content: center; }
 
 #selected-border {
   background: #0091ff;
@@ -456,6 +481,8 @@ article {
   .agreements__see-all, .agreements__id-link {
     font-weight: 700;
     color: #0091ff; }
+  .agreements__id-link {
+    font-size: 0.8rem; }
   .agreements__table {
     width: 100%; }
     .agreements__table tbody tr td {
@@ -467,7 +494,8 @@ article {
     text-align: left;
     font-size: 0.8rem; }
   .agreements__price {
-    font-weight: 700; }
+    font-weight: 700;
+    font-size: 0.8rem; }
     .agreements__price span {
       color: rgba(13, 22, 31, 0.4); }
   .agreements__status {
@@ -498,5 +526,129 @@ article {
       .agreements__profile-group .profile-photo figure {
         width: 28px;
         height: 28px; }
+  .agreements__ellipsis {
+    text-align: right; }
+
+@media screen and (max-width: 1290px) {
+  main {
+    position: relative; }
+
+  aside {
+    transform: translateX(-98%);
+    transition: 0.6s ease;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    z-index: 2;
+    width: 500px; }
+
+  article {
+    width: 98%;
+    max-width: none; }
+
+  #toggle-sidebar {
+    display: flex; }
+    #toggle-sidebar .fa-chevron-left {
+      display: none; }
+
+  article {
+    position: relative; }
+    article::before {
+      content: "";
+      display: block;
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      transition: 0.2s ease;
+      z-index: -1; }
+
+  main.sidebar-active aside {
+    transform: translateX(0);
+    transition: 0.6s ease; }
+  main.sidebar-active #toggle-sidebar .fa-chevron-left {
+    display: block; }
+  main.sidebar-active #toggle-sidebar .fa-chevron-right {
+    display: none; }
+
+  main.toggle-active article::before {
+    background: rgba(0, 0, 0, 0.4);
+    z-index: 1; } }
+@media screen and (max-width: 700px) {
+  .booking-status {
+    flex-flow: row wrap; }
+    .booking-status__icon {
+      width: 10%;
+      margin: 0; }
+    .booking-status__content {
+      width: 90%;
+      padding-left: 20px;
+      box-sizing: border-box; }
+    .booking-status__button {
+      margin-top: 22px; }
+
+  .cards {
+    flex-flow: column nowrap; }
+    .cards .card {
+      width: 100%;
+      margin-bottom: 22px; }
+      .cards .card__amount {
+        font-size: 1.6rem; }
+      .cards .card:last-child {
+        margin-bottom: 0; }
+
+  th[class$="hide-mobile"],
+  td[class$="hide-mobile"] {
+    display: none; } }
+@media screen and (max-width: 590px) {
+  aside {
+    width: 290px; }
+
+  .sidebar {
+    padding: 22px; }
+    .sidebar .sidebar-details ul li {
+      font-size: 0.7rem; }
+
+  article {
+    padding: 22px; }
+
+  #menu-button {
+    display: block;
+    cursor: pointer;
+    color: #0091ff;
+    position: relative;
+    z-index: 1; }
+    #menu-button .fa-xmark {
+      display: none; }
+    #menu-button.menu-active {
+      z-index: 4; }
+      #menu-button.menu-active .fa-xmark {
+        display: block; }
+      #menu-button.menu-active .fa-bars {
+        display: none; }
+
+  .header-menu {
+    background: #ffffff;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    transform: translateY(-100%);
+    transition: 0.5s ease;
+    padding: 40px;
+    padding-top: 16px;
+    box-sizing: border-box;
+    z-index: 3; }
+    .header-menu ul {
+      display: block; }
+      .header-menu ul li {
+        padding: 10px 0; }
+    .header-menu--menu-active {
+      transform: translateY(0);
+      transition: 0.5s ease; }
+
+  #selected-border {
+    display: none; } }
 
 /*# sourceMappingURL=index.css.map */
