--- a/scss/index.css
+++ b/scss/index.css
@@ -1,18 +1,3 @@
-/*$bg: #f5f9fc;
-$surface: #ffffff;
-
-$text: #0d161f;
-$text--light: rgba($text, 0.4);
-$light: rgba($text, 0.1);
-
-$primary: #0091ff;
-$secondary: #308fd6;
-$success: #5fc7ae;
-$accent: #ffb901;
-
-$primary--light: rgba($primary, 0.2);
-$success--light: rgba($success, 0.2);
-$accent--light: rgba($accent, 0.2); */
 :root {
   --color-bg: #f5f9fc;
   --color-surface: #ffffff;
@@ -30,7 +15,7 @@ $accent--light: rgba($accent, 0.2); */
   --color-bg: #161b22;
   --color-surface: #21262d;
   --color-text: #ffffff;
-  --color-text-light: rgba(255, 255, 255, 0.4);
+  --color-text-light: rgba(255, 255, 255, 0.6);
   --color-light: rgba(255, 255, 255, 0.1);
   --color-primary: #77bdfb;
   --color-success: #7ce38b;
@@ -209,6 +194,8 @@ aside {
       align-items: center;
       justify-content: center;
       font-size: 0.8rem; }
+      .sidebar .sidebar-main__icon:last-child {
+        margin-right: 0; }
       .sidebar .sidebar-main__icon--success {
         color: var(--color-success);
         background: var(--color-success-light); }
@@ -367,8 +354,7 @@ aside {
   border-left: 0; }
 
 article {
-  padding: 26px 60px;
-  height: 100vh;
+  padding: 26px 60px 14px;
   max-width: 1300px;
   box-sizing: border-box; }
 
